Typos and removed a speaker

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<tr class="hover_show_div"> 
 						<td class="table_time"> <b>10:00 AM</b> </td>
 
-						<td> <span style="color: #83A2D4"> empathizing </span> with Northrup Grumman </td>
+						<td> <span style="color: #83A2D4"> empathizing </span> with Northrop Grumman </td>
 					</tr>
 
 					<tr class="hover_show_div">
@@ -74,7 +74,7 @@
 					</tr>
 					<tr class="hover_show_div"> 
 						<td class="table_time"> <b>11:30 AM</b> </td>
-						<td> <span style="color: #83A2D4"> ideating </span> with TicketMaster </td>
+						<td> <span style="color: #83A2D4"> ideating </span> with Ticketmaster </td>
 					</tr>
 					<tr class="hover_show_div"> 
 						<td class="table_time"> <b>12:30 PM</b> </td>
@@ -109,7 +109,7 @@
 						<h3 class="schedule_text"> We will start with a ten minute overview of the day and jump into an intro to design thinking and its applications to experience design and related fields. We will also reveal the prompt and judging rubric for the final project. Team formation will be conducted after the ceremony.</h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
-						<h1> empathizing with Northrup Grumman </h1>
+						<h1> empathizing with Northrop Grumman </h1>
 						<h3 class="schedule_text"> Northrop Grumman, a defense technology and aerospace company, will be hosting a workshop on the first two steps of the design thinking process: empathizing with the user and defining the problem. Participants will learn how to craft personas and user journeys. Learn more about the workshop <a href="https://www.facebook.com/pg/BruinEntrepreneurs/posts/?ref=page_internal" class="text-link"> here</a>. </h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
@@ -117,7 +117,7 @@
 						<h3 class="schedule_text"> During this break, participants have a chance to visit Nate Mohler’s VR art installation, paint, or take a pic with your friends at our photobooth!</h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
-						<h1> ideating with TicketMaster </h1>
+						<h1> ideating with Ticketmaster </h1>
 						<h3 class="schedule_text"> Ticketmaster, a ticket sales and distribution company, will be hosting a workshop on that will elaborate on the ideation part of the first workshop. Participants will learn how to make wireframes and mockups. Learn more about the workshop <a href="https://www.facebook.com/BruinEntrepreneurs/photos/pb.529339870426855.-2207520000.1554283238./2582636678430487/?type=3&theater" class="text-link">here</a>. </h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
@@ -185,67 +185,67 @@
 				<h3 id="speaker-name">Amanda Muller</h3>
 				<p class="speak-pos"> Judge </p>
 				<p class="speak-pos">UX Technical Fellow - Space Programs</p>
-				<p class="speak-org"> Northrup Grumman </p>
+				<p class="speak-org"> Northrop Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/shivani_desai.png">
 				<h3 id="speaker-name">Shivani Desai</h3>
 				<p class="speak-pos"> Mentor </p>
 				<p class="speak-pos"> Manager - UX Efforts</p>
-				<p class="speak-org"> Northrup Grumman </p>
+				<p class="speak-org"> Northrop Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/travis_clarke.png">
 				<h3 id="speaker-name">Travis Clarke</h3>
 				<p class="speak-pos"> Workshop Host </p>
 				<p class="speak-pos">Lead UX/UI - Air & Space</p>
-				<p class="speak-org"> Northrup Grumman </p>
+				<p class="speak-org"> Northrop Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/myong_sung.png">
 				<h3 id="speaker-name">Myong Sung</h3>
 				<p class="speak-pos"> Workshop Host </p>
 				<p class="speak-pos"> Manager - Systems Engineering </p>
-				<p class="speak-org"> Northrup Grumman </p>
+				<p class="speak-org"> Northrop Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/ed_tien.png">
 				<h3 id="speaker-name">Ed Tien</h3>
 				<p class="speak-pos"> Mentor </p>
 				<p class="speak-pos"> Talent Acquisition</p>
-				<p class="speak-org"> Northrup Grumman </p>
+				<p class="speak-org"> Northrop Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/natalie_huynh.png">
 				<h3 id="speaker-name">Natalie Huynh</h3>
 				<p class="speak-pos"> Senior Designer </p>
-				<p class="speak-org"> TicketMaster </p>
+				<p class="speak-org"> Ticketmaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/julia_walck.png">
 				<h3 id="speaker-name">Julia Walck</h3>
 				<p class="speak-pos"> Senior Graphic Designer </p>
-				<p class="speak-org"> TicketMaster </p>
+				<p class="speak-org"> Ticketmaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/brandon_melchior.png">
 				<h3 id="speaker-name">Brandon Melchior</h3>
 				<p class="speak-pos"> Judge </p>
 				<p class="speak-pos"> Sr Director – Design </p>
-				<p class="speak-org"> TicketMaster </p>
+				<p class="speak-org"> Ticketmaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/zachary_hubbard.png">
 				<h3 id="speaker-name">Zachary Hubbard</h3>
 				<p class="speak-pos">Principal UX Designer - Space</p>
-				<p class="speak-org"> Northrup Grumman </p>
+				<p class="speak-org"> Northrop Grumman </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/dan_selden.png">
 				<h3 id="speaker-name">Dan Selden</h3>
 				<p class="speak-pos"> Mentor </p>
 				<p class="speak-pos"> Sr. Product Designer II </p>
-				<p class="speak-org"> TicketMaster </p>
+				<p class="speak-org"> Ticketmaster </p>
 			</div>
 			<div id="speaker-card">
 				<img class="speaker-pics" src="speaker_pics/alexander_schroeder.png">
@@ -258,14 +258,7 @@
 				<h3 id="speaker-name">Drey Cameron</h3>
 				<p class="speak-pos"> Judge </p>
 				<p class="speak-pos"> Director - Product Design</p>
-				<p class="speak-org"> TicketMaster </p>
-			</div>
-			<div id="speaker-card">
-				<img class="speaker-pics" src="speaker_pics/clint_cebulak.png">
-				<h3 id="speaker-name">Clint Cebulak</h3>
-				<p class="speak-pos"> Mentor </p>
-				<p class="speak-pos"> Director - Communications Design </p>
-				<p class="speak-org"> TicketMaster </p>
+				<p class="speak-org"> Ticketmaster </p>
 			</div>
 		</div>
 	</div>
@@ -312,7 +305,7 @@
 		</h1>
 		<div class="sponsorsflex flex-container">
 			<a class="sponsorDivImg north" target="_blank" href="http://www.northropgrumman.com/"> </a>
-			<a class="sponsorDivImg ticket" target="_blank" href="https://www.ticketmaster.com/"> </a>
+			<a class="sponsorDivImg ticket" target="_blank" href="https://www.Ticketmaster.com/"> </a>
 			<a class="sponsorDivImg startup" target="_blank" href="https://startupucla.com/"> </a>
 			<a class="sponsorDivImg sketch" target="_blank" href="https://www.sketch.com/"> </a>
 			<a class="sponsorDivImg linode" target="_blank" href="https://www.linode.com/"> </a>
