fixed console errors and cleaned up nasty mouseover function for schedule

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	</div>
 	<div id="schedule" class="content-section">
 		<h1 class="section-title"> schedule </h1>
-		<div style="display: flex">
+		<div style="display: flex; width: 100%; height: 100%;">
 			<div class="schedule_wrapper">
 			<table class="hoverTable">
 				<tbody>
@@ -121,7 +121,7 @@
 						<h3 class="schedule_text"> Ticketmaster, a ticket sales and distribution company, will be hosting a workshop on that will elaborate on the ideation part of the first workshop. Participants will learn how to make wireframes and mockups. Learn more about the workshop <a href="https://www.facebook.com/BruinEntrepreneurs/photos/pb.529339870426855.-2207520000.1554283238./2582636678430487/?type=3&theater" class="text-link">here</a>. </h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
-						<h1> lunch </h1>
+						<h1> lunch on the hill </h1>
 						<h3 class="schedule_text"> Lunch will be provided by De Neve dining hall. There will be mini workshops for Sketch and Adobe Xd. </h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
@@ -129,11 +129,11 @@
 						<h3 class="schedule_text"> Creative Labs will be hosting a workshop on prototyping a product. Participants will be learning how to turn their mockup into an interactive model of their envisioned product using Figma. Learn more about the workshop <a href="https://www.facebook.com/BruinEntrepreneurs/photos/pb.529339870426855.-2207520000.1554283238./2584868798207275/?type=3&theater" class="text-link">here</a>. </h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
-						<h1> work time </h1>
+						<h1> design time </h1>
 						<h3 class="schedule_text"> During this work time, you will have a chance to consolidate all the deliverables (personas, mockups, prototypes) that you will have made in the workshops into a final project. You will have flexibility in the form in which you choose present your project. </h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
-						<h1> design in industry panel + q&a </h1>
+						<h1> design in industry panel </h1>
 						<h3 class="schedule_text"> We have design industry leaders Chris Alonzo, Chengsu Chen, Jeff Morris, and Kelly Wald speaking on our Design in Industry panel. The panel will be moderated by Tiffany Yu and Natasha Puthukudy, followed by the audience  asking questions during the second half of the panel.  Judging for final projects will be happening simultaneously as the panel is happening. </h3>
 					</div>
 					<div class="schedule_content_div" style="display: none;">
