--- a/index.html
+++ b/index.html
@@ -13,16 +13,74 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no" />
 </head>
 <body>
-	<div id="envision" class="content-section">
-		<div id="title-box">
+    <!-- <div class="page">
+	 <div class="container">
+	 <div class="half-column"></div>
+	 <div class="half-column" id="noborder">
+	 <div class="half-row" id="thiccBorderBottom">
+	 <div class="half-row" id="smallRow">
+	 <h1>sponsors</h1>
+	 </div>
+	 <div class="half-row" id="thiccBorderTop"></div>
+	 </div>
+	 <div class="half-row" id="thiccBorderLeft">
+	 <div class="half-row" id="thiccMargin">
+	 <div class="box" id="noborder">
+	 <div class="dogImage"></div>
+	 </div>
+	 </div>
+	 </div>
+	 </div>
+	 </div>
+	 </div> -->
+    <div class="page">
+	<div class="container-plain">
+	    <div id="title-box" class="half-column-plain" >
+		<div id="title-left-upper" class="half-row" >
+		    <div id="title-text-box" >
 			<h1 id="title-text">envision</h1>
 			<h3 id="title-date-text">apr - 04</h3>
+		    </div>
 		</div>
-		<div id="link-box">
-			<div id="link-box-top"></div>
-			<div id="link-box-bottom"></div>
+		<div class="half-row-plain" >
+		    <h3 id="title-sub-title"> designathon</h3>
+		    <p class="title-sub-text" style="text-align: left;" >
+			Designathon is a one day design hackathon, with the goal of
+			fostering design thinking at UCLA. We aim to challenge
+			your scope of design knowledge, and introduce you to
+			the hard and soft skills involved in developing an
+			expertise in the field, all while getting the
+			chance to create something exciting that solves a
+			real world problem.
+			<br>
+			<br>
+			Applications will open in February!
+			<br>
+			<br>
+			Follow @bruinentrepreneurs on Facebook and
+			@bruin.entrepreneurs on Instagram for updates.
+		    </p>
 		</div>
+	    </div>
+	    <div class="half-column" >
+		<div class="section-title" >
+		    <h2 class="section-title-text" style="text-align: center;">things you can click</h2>
+		</div>
+		<div class="link-box" >
+		    <h2 class="section-title-text">about</h2>
+		    <p class="link-subtext">What's Designathon?</p>
+		    <h2 class="section-title-text">schedule</h2>
+		    <p class="link-subtext">What's Designathon?</p>
+		    <h2 class="section-title-text">sponsors</h2>
+		    <p class="link-subtext">What's Designathon?</p>
+		    <h2 class="section-title-text">last year</h2>
+		    <p class="link-subtext">What's Designathon?</p>
+		    <h2 class="section-title-text">faq</h2>
+		    <p class="link-subtext">What's Designathon?</p>
+		</div>
+	    </div>
 	</div>
+    </div>
 
 	<div id="schedule" class="content-section">
 		<h1 class="section-title"> schedule </h1>
