Added faq section and refined the title section

--- a/index.html
+++ b/index.html
@@ -34,52 +34,62 @@
 	 </div>
 	 </div> -->
     <div class="page">
-	<div class="container-plain">
-	    <div id="title-box" class="half-column-plain" >
-		<div id="title-left-upper" class="half-row" >
-		    <div id="title-text-box" >
-			<h1 id="title-text">envision</h1>
-			<h3 id="title-date-text">apr - 04</h3>
-		    </div>
-		</div>
-		<div class="half-row-plain" >
-		    <h3 id="title-sub-title"> designathon</h3>
-		    <p class="title-sub-text" style="text-align: left;" >
-			Designathon is a one day design hackathon, with the goal of
-			fostering design thinking at UCLA. We aim to challenge
-			your scope of design knowledge, and introduce you to
-			the hard and soft skills involved in developing an
-			expertise in the field, all while getting the
-			chance to create something exciting that solves a
-			real world problem.
-			<br>
-			<br>
-			Applications will open in February!
-			<br>
-			<br>
-			Follow @bruinentrepreneurs on Facebook and
-			@bruin.entrepreneurs on Instagram for updates.
-		    </p>
-		</div>
+      <div class="container-plain">
+	<div id="title-box" class="half-column-plain" >
+	  <div id="title-left-upper" class="half-row" >
+	    <div id="title-text-box" >
+	      <h1 id="title-text">envision</h1>
+	      <h3 id="title-date-text">apr - 04</h3>
 	    </div>
-	    <div class="half-column" >
-		<div class="section-title" >
-		    <h2 class="section-title-text" style="text-align: center;">things you can click</h2>
-		</div>
-		<div class="link-box" >
-		    <h2 class="section-title-text">about</h2>
-		    <p class="link-subtext">What's Designathon?</p>
-		    <h2 class="section-title-text">schedule</h2>
-		    <p class="link-subtext">What's Designathon?</p>
-		    <h2 class="section-title-text">sponsors</h2>
-		    <p class="link-subtext">What's Designathon?</p>
-		    <h2 class="section-title-text">last year</h2>
-		    <p class="link-subtext">What's Designathon?</p>
-		    <h2 class="section-title-text">faq</h2>
-		    <p class="link-subtext">What's Designathon?</p>
-		</div>
-	    </div>
+	  </div>
+	  <div class="half-row-plain" >
+	    <h3 id="title-sub-title"> designathon</h3>
+	    <p class="title-sub-text" style="text-align: left;" >
+	      Designathon is a one day design hackathon, with the goal of
+	      fostering design thinking at UCLA. We aim to challenge
+	      your scope of design knowledge, and introduce you to
+	      the hard and soft skills involved in developing an
+	      expertise in the field, all while getting the
+	      chance to create something exciting that solves a
+	      real world problem.
+	      <br>
+	      <br>
+	      Applications will open in February!
+	      <br>
+	      <br>
+	      Follow @bruinentrepreneurs on Facebook and
+	      @bruin.entrepreneurs on Instagram for updates.
+	    </p>
+	  </div>
 	</div>
+	<div class="half-column" >
+	  <div class="section-title" >
+	    <h2 class="section-title-text" style="margin: auto auto;">things you can click</h2>
+	  </div>
+	  <div class="link-box" >
+	      <div class="link-item" >
+		  <h2 class="link-title-text">about</h2>
+		  <p class="link-subtext">What's Designathon?</p>
+	      </div>
+	      <div class="link-item">
+		  <h2 class="link-title-text">schedule</h2>
+		  <p class="link-subtext">What's Designathon?</p>
+	      </div>
+	      <div class="link-item">
+		  <h2 class="link-title-text">sponsors</h2>
+		  <p class="link-subtext">What's Designathon?</p>
+	      </div>
+	      <div class="link-item">
+		  <h2 class="link-title-text">last year</h2>
+		  <p class="link-subtext">What's Designathon?</p>
+	      </div>
+	      <div class="link-item">
+		  <h2 class="link-title-text">faq</h2>
+		  <p class="link-subtext">What's Designathon?</p>
+	      </div>
+	  </div>
+	</div>
+      </div>
     </div>
 
 	<div id="schedule" class="content-section">
@@ -197,8 +207,70 @@
           </div>
         </div>
       </div>
-    </div>
 	</div>
+
+	<div class="page">
+	    <div class="container" >
+		<div class="section-title" >
+		    <h1 class="section-title-text" >faq</h1>
+		</div>
+		<div class="half-column-plain" >
+		    <div class="q-box" >
+			<h3 class="q-box-question" >What's design thinking?</h3>
+			<p>
+			    Design thinking is a human centric problem solving
+			    process that emphasizes empathy, ideation, and
+			    experimentation to creatively tackle big issues.
+			</p>
+		    </div>
+		    <div class="q-box" >
+			<h3 class="q-box-question" > Who can attend?</h3>
+			<p>
+			    Whether you're a complete beginner or a seasoned pro,
+			    freshman or senior, you're welcome to participate in
+			    this all-inclusive event!
+			</p>
+		    </div>
+		    <div class="q-box" >
+			<h3 class="q-box-question" >What should I bring?</h3>
+			<p>
+			    Bring your Bruin card or any government-issued ID to
+			    check in to the event. If you have a laptop, you should
+			    bring that as well (and chargers).
+			</p>
+		    </div>
+		</div>
+		<div class="half-column-plain" >
+		    <div class="q-box" >
+			<h3 class="q-box-question" >Why's it important to me?</h3>
+			<p>
+			    Design thinking is all about embracing simple shifts in
+			    your mindset to approach problems from a new direction.
+			    What you'll learn is super applicable to any major, career,
+			    or industry.
+			</p>
+		    </div>
+		    <div class="q-box" >
+			<h3 class="q-box-question" >How do I prepare?</h3>
+			<p>
+			    Our workshops will be catered towards guiding you
+			    throughout the day at each step in creating your
+			    projects, but if you want to read up on the design
+			    thinking process beforehand, please feel free!
+			</p>
+		    </div>
+		    <div class="q-box" >
+			<h3 class="q-box-question" >How do groups work?</h3>
+			<p>
+			    We'll be doing projects in teams of 3-4, but no worries
+			    if you don't have a group. We'll be meeting people, doing
+			    some #bonding, you'll get on a team at the event. 
+			</p>
+		    </div>
+		</div>
+	    </div>
+	</div>
+</div>
 <script src="base.js"></script>
 <script src="faded.js"></script>
 </body>
