Made the bones of the last year section

--- a/index.html
+++ b/index.html
@@ -210,6 +210,56 @@
 	</div>
 
 	<div class="page">
+	  <div class="container-plain">
+	    <div class="half-column" style="height: 50%; border-right: 0;">
+	      <div class="section-title" style="height: 30%;" >
+		<h1 class="section-title-text">last year</h1>
+	      </div>
+	      <div class="half-row-plain">
+		<p style="margin: auto 4%;">
+		  We had 100 amazing attendees last year who picked an
+		  aspect of the college experience to (re)define. Groups worked
+		  on ideas that varied from fostering more collaboration between
+		  STEM and the arts, to improving the way students find scholarships.
+		  <br>
+		  <br>
+		  We were also joined by our friends at Northrop Grumman and
+		  Ticketmaster, who led ideation and visualization workshops,
+		  as well as our amazing industry panelists: Jeff Morris,
+		  Kelly Wald, Chris Alonzo, and Chengsu Chen.
+		</p>
+	      </div>
+	    </div>
+	    <div class="half-column">
+	      <div class="last-year-pic-box" style="height: 50%">
+	      </div>
+	      <div id="last-year-winners-box">
+		<div class="winner-box">
+		  <h3 class="winner-name">1st | Hakan Alpay, John Ma</h3>
+		  <p>
+		    Yumshare: A way to find and share food with your campus community.
+		  </p>
+		</div>
+		<div class="winner-box">
+		  <h3 class="winner-name">2nd | Jenn Chow, Wilny Duong, Justin Tran</h3>
+		  <p>
+		    MyUCLA Enhancement: An academic plan generator that makes personalized
+		    class plans for students. 
+		  </p>
+		</div>
+		<div class="winner-box">
+		  <h3 class="winner-name">3rd | Lisa Bi, Maggie Ching</h3>
+		  <p>
+		    Schedule Buddy: A website that helps students schedule their quarter
+		    more easily. 
+		  </p>
+		</div>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+
+	<div class="page">
 	    <div class="container" >
 		<div class="section-title" >
 		    <h1 class="section-title-text" >faq</h1>
