Updated base.css to include size formatting and modified some html tags

--- a/index.html
+++ b/index.html
@@ -13,26 +13,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no" />
 </head>
 <body>
-    <!-- <div class="page">
-	 <div class="container">
-	 <div class="half-column"></div>
-	 <div class="half-column" id="noborder">
-	 <div class="half-row" id="thiccBorderBottom">
-	 <div class="half-row" id="smallRow">
-	 <h1>sponsors</h1>
-	 </div>
-	 <div class="half-row" id="thiccBorderTop"></div>
-	 </div>
-	 <div class="half-row" id="thiccBorderLeft">
-	 <div class="half-row" id="thiccMargin">
-	 <div class="box" id="noborder">
-	 <div class="dogImage"></div>
-	 </div>
-	 </div>
-	 </div>
-	 </div>
-	 </div>
-	 </div> -->
+
     <div class="page">
       <div class="container-plain">
 	<div id="title-box" class="half-column-plain" >
@@ -68,23 +49,23 @@
 	  </div>
 	  <div class="link-box" >
 	      <div class="link-item" >
-		  <h2 class="link-title-text">about</h2>
+		  <a href="#title-sub-title"><h2 class="link-title-text">about</h2></a>
 		  <p class="link-subtext">What's Designathon?</p>
 	      </div>
 	      <div class="link-item">
-		  <h2 class="link-title-text">schedule</h2>
+		  <a href="#schedule"><h2 class="link-title-text">schedule</h2></a>
 		  <p class="link-subtext">What's Designathon?</p>
 	      </div>
 	      <div class="link-item">
-		  <h2 class="link-title-text">sponsors</h2>
+		  <a href="#sponsors"><h2 class="link-title-text">sponsors</h2></a>
 		  <p class="link-subtext">What's Designathon?</p>
 	      </div>
 	      <div class="link-item">
-		  <h2 class="link-title-text">last year</h2>
+		  <a href='#last-year'><h2 class="link-title-text">last year</h2></a>
 		  <p class="link-subtext">What's Designathon?</p>
 	      </div>
 	      <div class="link-item">
-		  <h2 class="link-title-text">faq</h2>
+		  <a href='#faq'><h2 class="link-title-text">faq</h2></a>
 		  <p class="link-subtext">What's Designathon?</p>
 	      </div>
 	  </div>
@@ -209,14 +190,14 @@
       </div>
 	</div>
 
-	<div class="page">
+	<div id='last-year' class="page">
 	  <div class="container-plain">
 	    <div class="half-column" style="height: 50%; border-right: 0;">
 	      <div class="section-title" style="height: 30%;" >
 		<h1 class="section-title-text">last year</h1>
 	      </div>
 	      <div class="half-row-plain">
-		<p style="margin: auto 4%;">
+		<p id='last-year-text'>
 		  We had 100 amazing attendees last year who picked an
 		  aspect of the college experience to (re)define. Groups worked
 		  on ideas that varied from fostering more collaboration between
@@ -244,14 +225,14 @@
 		  <h3 class="winner-name">2nd | Jenn Chow, Wilny Duong, Justin Tran</h3>
 		  <p>
 		    MyUCLA Enhancement: An academic plan generator that makes personalized
-		    class plans for students. 
+		    class plans for students.
 		  </p>
 		</div>
 		<div class="winner-box">
 		  <h3 class="winner-name">3rd | Lisa Bi, Maggie Ching</h3>
 		  <p>
 		    Schedule Buddy: A website that helps students schedule their quarter
-		    more easily. 
+		    more easily.
 		  </p>
 		</div>
 	      </div>
@@ -260,7 +241,7 @@
 	</div>
 
 	<div class="page">
-	    <div class="container" >
+	    <div id='faq' class="container" >
 		<div class="section-title" >
 		    <h1 class="section-title-text" >faq</h1>
 		</div>
@@ -314,7 +295,7 @@
 			<p>
 			    We'll be doing projects in teams of 3-4, but no worries
 			    if you don't have a group. We'll be meeting people, doing
-			    some #bonding, you'll get on a team at the event. 
+			    some #bonding, you'll get on a team at the event.
 			</p>
 		    </div>
 		</div>
