Added photo section to title section of site

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 	    <h2 class="section-title-text" style="margin: auto auto;">things you can click</h2>
 	  </div>
 	  <div class="link-box" >
+				<div id="foot-img-box">
+					<img id='foot-img' src='./e1.png'>
+				</div>
 	      <div class="link-item" >
 		  <a href="#title-sub-title"><h2 class="link-title-text">about</h2></a>
 		  <p class="link-subtext">What's Designathon?</p>
