--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	  </div>
 	  <div class="link-box" >
 				<div id="foot-img-box">
-					<img id='foot-img' src='./e1.png'>
+					<img id='foot-img' src='./assets/foot.png'>
 				</div>
 	      <div class="link-item" >
 		  <a href="#title-sub-title"><h2 class="link-title-text">about</h2></a>
@@ -76,106 +76,11 @@
       </div>
     </div>
 
-	<div id="schedule" class="content-section">
-		<h1 class="section-title"> schedule </h1>
-		<div style="display: flex; width: 100%; height: 100%;">
-			<div class="schedule_wrapper">
-			<table class="hoverTable">
-				<tbody>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b>8:30 AM</b> </td>
-						<td> check-in </td>
-					</tr>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b>9:00 AM</b> </td>
-						<td> intro to UX | design challenge </td>
-					</tr>
 
-					<tr class="hover_show_div">
-						<td class="table_time"> <b>10:00 AM</b> </td>
-
-						<td> <span style="color: #83A2D4"> empathizing </span> with Northrop Grumman </td>
-					</tr>
-
-					<tr class="hover_show_div">
-						<td class="table_time"> <b>11:00 AM</b> </td>
-						<td> think break with activities </td>
-					</tr>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b>11:30 AM</b> </td>
-						<td> <span style="color: #83A2D4"> ideating </span> with Ticketmaster </td>
-					</tr>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b>12:30 PM</b> </td>
-						<td> lunch on the hill </td>
-					</tr>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b>1:30 PM</b> </td>
-						<td> <span style="color: #83A2D4"> prototyping </span> with creative labs </td>
-					</tr>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b> 2:30 PM </b> </td>
-						<td> design time </td>
-					</tr>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b> 4:00 PM </b> </td>
-						<td> design in industry panel </td>
-					</tr>
-					<tr class="hover_show_div">
-						<td class="table_time"> <b> 5:00 PM </b> </td>
-						<td> closing ceremony </td>
-					</tr>
-				</body>
-			</table>
-			</div>
-			<div>
-					<div class="schedule_content_div" style="display: block;">
-						<h1> check-in </h1>
-						<h3 class="schedule_text"> Pastries and coffee will be provided for breakfast as participants check in for the event. </h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> design challenge </h1>
-						<h3 class="schedule_text"> We will start with a ten minute overview of the day and jump into an intro to design thinking and its applications to experience design and related fields. We will also reveal the prompt and judging rubric for the final project. Team formation will be conducted after the ceremony.</h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> empathizing with Northrop Grumman </h1>
-						<h3 class="schedule_text"> Northrop Grumman, a defense technology and aerospace company, will be hosting a workshop on the first two steps of the design thinking process: empathizing with the user and defining the problem. Participants will learn how to craft personas and user journeys. Learn more about the workshop <a href="https://www.facebook.com/pg/BruinEntrepreneurs/posts/?ref=page_internal" class="text-link"> here</a>. </h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> think break </h1>
-						<h3 class="schedule_text"> During this break, participants have a chance to visit Nate Mohler’s VR art installation, paint, or take a pic with your friends at our photobooth!</h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> ideating with Ticketmaster </h1>
-						<h3 class="schedule_text"> Ticketmaster, a ticket sales and distribution company, will be hosting a workshop on that will elaborate on the ideation part of the first workshop. Participants will learn how to make wireframes and mockups. Learn more about the workshop <a href="https://www.facebook.com/BruinEntrepreneurs/photos/pb.529339870426855.-2207520000.1554283238./2582636678430487/?type=3&theater" class="text-link">here</a>. </h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> lunch on the hill </h1>
-						<h3 class="schedule_text"> Lunch will be provided by De Neve dining hall. There will be mini workshops for Sketch and Adobe Xd. </h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> prototyping with creative labs </h1>
-						<h3 class="schedule_text"> Creative Labs will be hosting a workshop on prototyping a product. Participants will be learning how to turn their mockup into an interactive model of their envisioned product using Figma. Learn more about the workshop <a href="https://www.facebook.com/BruinEntrepreneurs/photos/pb.529339870426855.-2207520000.1554283238./2584868798207275/?type=3&theater" class="text-link">here</a>. </h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> design time </h1>
-						<h3 class="schedule_text"> During this work time, you will have a chance to consolidate all the deliverables (personas, mockups, prototypes) that you will have made in the workshops into a final project. You will have flexibility in the form in which you choose present your project. </h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> design in industry panel </h1>
-						<h3 class="schedule_text"> We have design industry leaders Chris Alonzo, Chengsu Chen, Jeff Morris, and Kelly Wald speaking on our Design in Industry panel. The panel will be moderated by Tiffany Yu and Natasha Puthukudy, followed by the audience  asking questions during the second half of the panel.  Judging for final projects will be happening simultaneously as the panel is happening. </h3>
-					</div>
-					<div class="schedule_content_div" style="display: none;">
-						<h1> closing ceremony </h1>
-						<h3 class="schedule_text"> The closing ceremony will include announcing winners, having the winners present their projects, and some concluding thoughts on design thinking and the competition. </h3>
-					</div>
-			</div>
-		</div>
-	</div>
 	<div class="page">
       <div class="container">
         <div class="half-column"></div>
-        <div class="half-column" id="noborder">
+        <div class="half-column noborder" >
           <div class="half-row" id="thiccBorderBottom">
             <div class="half-row" id="smallRow">
               <h1>sponsors</h1>
@@ -184,8 +89,8 @@
           </div>
           <div class="half-row" id="thiccBorderLeft">
             <div class="half-row" id="thiccMargin">
-                <div class="box" id="noborder">
-                  <div class="dogImage"></div>
+                <div class="box noborder" >
+                  <img id="dogImage" src='./assets/dog.png'>
                 </div>
             </div>
           </div>
