Added in picture to last year's winners, modified faqs

--- a/index.html
+++ b/index.html
@@ -102,25 +102,35 @@
 	  <div class="container-plain">
 	    <div class="half-column" style="height: 50%; border-right: 0;">
 	      <div class="section-title" style="height: 30%;" >
-		<h1 class="section-title-text">last year</h1>
+					<h1 class="section-title-text">last year</h1>
 	      </div>
 	      <div class="half-row-plain">
-		<p id='last-year-text'>
-		  We had 100 amazing attendees last year who picked an
-		  aspect of the college experience to (re)define. Groups worked
-		  on ideas that varied from fostering more collaboration between
-		  STEM and the arts, to improving the way students find scholarships.
-		  <br>
-		  <br>
-		  We were also joined by our friends at Northrop Grumman and
-		  Ticketmaster, who led ideation and visualization workshops,
-		  as well as our amazing industry panelists: Jeff Morris,
-		  Kelly Wald, Chris Alonzo, and Chengsu Chen.
-		</p>
+					<p id='last-year-text'>
+					  We had 100 amazing attendees last year who picked an
+					  aspect of the college experience to (re)define. Groups worked
+					  on ideas that varied from fostering more collaboration between
+					  STEM and the arts, to improving the way students find scholarships.
+					  <br>
+					  <br>
+					  We were also joined by our friends at Northrop Grumman and
+					  Ticketmaster, who led ideation and visualization workshops,
+					  as well as our amazing industry panelists: Jeff Morris,
+					  Kelly Wald, Chris Alonzo, and Chengsu Chen.
+					</p>
+					<div id='star-background'>
+						<img id='star-pic' src='./assets/blue2-01.png'>
+					</div>
 	      </div>
 	    </div>
 	    <div class="half-column">
-	      <div class="last-year-pic-box" style="height: 50%">
+	      <div id="last-year-pic-box">
+					<img id='whiteboard-pic' src='./assets/fullsizeoutput_17e4.jpeg'>
+					<div style='display: flex; justify-content: center;'>
+						<div style='font-weight: 900; font-size: 1.5rem;'>&mdash;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+						<div style='font-weight: 700; font-size: 1.5rem;'>&mdash;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+						<div style='font-weight: 500; font-size: 1.5rem;'>&mdash;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+						<div style='font-weight: 300; font-size: 1.5rem;'>&mdash;&nbsp;&nbsp;&nbsp;&nbsp;</div>
+					</div>
 	      </div>
 	      <div id="last-year-winners-box">
 		<div class="winner-box">
@@ -156,23 +166,23 @@
 		<div class="half-column-plain" >
 		    <div class="q-box" >
 			<h3 class="q-box-question" >What's design thinking?</h3>
-			<p>
+			<p style='margin-top: 0;'>
 			    Design thinking is a human centric problem solving
 			    process that emphasizes empathy, ideation, and
 			    experimentation to creatively tackle big issues.
 			</p>
 		    </div>
-		    <div class="q-box" >
+		 <div class="q-box" >
 			<h3 class="q-box-question" > Who can attend?</h3>
-			<p>
+			<p style='margin-top: 0;'>
 			    Whether you're a complete beginner or a seasoned pro,
 			    freshman or senior, you're welcome to participate in
 			    this all-inclusive event!
 			</p>
-		    </div>
+		 </div>
 		    <div class="q-box" >
 			<h3 class="q-box-question" >What should I bring?</h3>
-			<p>
+			<p style='margin-top: 0;'>
 			    Bring your Bruin card or any government-issued ID to
 			    check in to the event. If you have a laptop, you should
 			    bring that as well (and chargers).
@@ -182,7 +192,7 @@
 		<div class="half-column-plain" >
 		    <div class="q-box" >
 			<h3 class="q-box-question" >Why's it important to me?</h3>
-			<p>
+			<p style='margin-top: 0;'>
 			    Design thinking is all about embracing simple shifts in
 			    your mindset to approach problems from a new direction.
 			    What you'll learn is super applicable to any major, career,
@@ -191,7 +201,7 @@
 		    </div>
 		    <div class="q-box" >
 			<h3 class="q-box-question" >How do I prepare?</h3>
-			<p>
+			<p style='margin-top: 0;'>
 			    Our workshops will be catered towards guiding you
 			    throughout the day at each step in creating your
 			    projects, but if you want to read up on the design
